force-app/main/default/objects/NPN_Partner_Locator__c/NPN_Partner_Locator__c.object-meta.xml
<CustomObject>
    <description>NPN Partner Locator</description>
    <label>NPN Partner Locator</label>
    <nameField>
        <displayFormat>PL-{00000}</displayFormat>
        <label>NPN Partner Locator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPN Partner Locators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>