force-app/main/default/objects/NPN_Partner_Locator__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NPN Partner Locators</relationshipLabel>
    <relationshipName>NPN_Partner_Locators</relationshipName>
    <type>Lookup</type>
</CustomField>