force-app/main/default/objects/NPN_Partner_Locator__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF(NOT(ISBLANK(Street__c)), Street__c &amp; BR(),&apos;&apos;) 
&amp; IF(NOT(ISBLANK(City__c)), City__c &amp; BR(),&apos;&apos;) 
&amp; IF(NOT(ISBLANK(State__c)), State__c &amp; BR(),&apos;&apos;) 
&amp; IF(NOT(ISBLANK(Zip_Postal_Code__c)), Zip_Postal_Code__c &amp; BR(),&apos;&apos;) 
&amp; IF(NOT(ISBLANK(Country__c)), Country__c &amp; BR(),&apos;&apos;)</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>