force-app/main/default/objects/NPN_Partner_Locator__c/fields/Partner_Competency__c.field-meta.xml
<CustomField>
    <fullName>Partner_Competency__c</fullName>
    <label>Partner Competency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compute</fullName>
            </value>
            <value>
                <fullName>Virtualization</fullName>
            </value>
            <value>
                <fullName>Visualization</fullName>
            </value>
            <value>
                <fullName>Compute DGX</fullName>
            </value>
            <value>
                <fullName>Embedded Edge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>