force-app/main/default/objects/NPN_Partner_Locator__c/fields/Partner_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program_Name__c</fullName>
    <label>Partner Program Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solution Provider</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Cloud Service Provider</fullName>
            </value>
            <value>
                <fullName>Solutions Integration Partner</fullName>
            </value>
            <value>
                <fullName>Education Services</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Solution Advisor - Storage Partner</fullName>
            </value>
            <value>
                <fullName>Global Systems Integrator</fullName>
            </value>
            <value>
                <fullName>Solution Advisor - Data Center Provider</fullName>
            </value>
            <value>
                <fullName>Federal Systems Integrator</fullName>
                <isActive>false</isActive>
                <label>Federal Systems Integrator</label>
            </value>
            <value>
                <fullName>Service Delivery Partner</fullName>
                <isActive>false</isActive>
                <label>Service Delivery Partner</label>
            </value>
            <value>
                <fullName>Services Subcontractor</fullName>
                <isActive>false</isActive>
                <label>Services Subcontractor</label>
            </value>
            <value>
                <fullName>Solution Advisor</fullName>
                <isActive>false</isActive>
                <label>Solution Advisor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>