force-app/main/default/objects/NPN_Partner_Locator__c/fields/Partner_Sub_Program__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sub_Program__c</fullName>
    <label>Partner Sub Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDU Services</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Support Services</fullName>
            </value>
            <value>
                <fullName>Data Center Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>