force-app/main/default/objects/NPN_Partner_Locator__c/fields/Program_Level__c.field-meta.xml
<CustomField>
    <fullName>Program_Level__c</fullName>
    <label>Program Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>