force-app/main/default/objects/NPN_Partner_Locator__c/fields/ProgramType_Competency_Level__c.field-meta.xml
<CustomField>
    <fullName>ProgramType_Competency_Level__c</fullName>
    <formula>Account_Name__r.NPN_Active_Program_Competency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProgramType_Competency_Level</label>
    <type>Text</type>
</CustomField>