force-app/main/default/objects/NPN_Partner_Locator__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Partner_Name__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>Partner_Competency__c</columns>
    <columns>Partner_Program_Name__c</columns>
    <columns>Partner_Sub_Program__c</columns>
    <columns>Program_Level__c</columns>
    <columns>ProgramType_Competency_Level__c</columns>
    <columns>Region__c</columns>
    <columns>State__c</columns>
    <columns>Zip_Postal_Code__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>